# wallflow

./: worklog.md
crates/wallflow-cli/: Cargo.toml
crates/wallflow-common/src/: lib.rs  monitor.rs  renderer.rs  runtime.rs  wallpaper.rs
crates/wallflow-core/: Cargo.toml
crates/wallflow-desktop/src/: lib.rs
crates/wallflow-ipc/: Cargo.toml
crates/wallflow-monitor/: Cargo.toml
crates/wallflow-monitor/src/: diff.rs
crates/wallflow-package/src/: lib.rs  manifest.rs
crates/wallflow-render/: Cargo.toml
crates/wallflow-render/src/: color.rs  presenter.rs  renderer.rs  wgpu_backend.rs
crates/wallflow-renderer/src/: main.rs
docs/agent/prompts/: 002-windows-desktop-attach-hardening.md
docs/architecture/: 000-overview.md  010-renderer-window-runtime.md  011-static-render-output.md
download/: wallflow-stage010.bundle
download/wallflow-patches/: 0001-81298e37-ce90-47c9-a9e2-7dd13dafda39.patch  0002-fbb48039-ba15-4cee-870c-936eb1541110.patch  0003-90cec141-3500-4d95-ab02-9953012c3d5d.patch  0004-513de8c7-ef9c-4102-8d58-c72b529eef22.patch  0005-94fb6ba9-2081-42f8-a665-ea42ed353d9a.patch  0006-9d18735d-3178-4272-ba23-e6cdce518437.patch  0007-df044710-c106-4717-9981-2a9cb8488ba4.patch  0008-17573af0-e523-4bd9-8158-b2a926e1abd2.patch  0009-010-add-cloud-safe-softbuffer-window-presenter.patch  0010-008f201b-ad74-4cf7-847d-e02ccfbb32e7.patch
wallflow/wallflow-foundation/: .gitignore  Cargo.toml  README.md
wallflow/wallflow-foundation/.github/workflows/: ci.yml
wallflow/wallflow-foundation/apps/wallflow-ui/: README.md
wallflow/wallflow-foundation/crates/wallflow-cli/: Cargo.toml
wallflow/wallflow-foundation/crates/wallflow-cli/src/: main.rs
wallflow/wallflow-foundation/crates/wallflow-common/: Cargo.toml
wallflow/wallflow-foundation/crates/wallflow-common/src/: error.rs  fit_mode.rs  lib.rs  renderer.rs  wallpaper.rs
wallflow/wallflow-foundation/crates/wallflow-config/: Cargo.toml
wallflow/wallflow-foundation/crates/wallflow-config/src/: lib.rs
wallflow/wallflow-foundation/crates/wallflow-core/: Cargo.toml
wallflow/wallflow-foundation/crates/wallflow-core/src/: app.rs  lib.rs  renderer_process.rs  supervisor.rs  watchdog.rs
wallflow/wallflow-foundation/crates/wallflow-desktop/: Cargo.toml
wallflow/wallflow-foundation/crates/wallflow-desktop/src/: lib.rs
wallflow/wallflow-foundation/crates/wallflow-ipc/: Cargo.toml
wallflow/wallflow-foundation/crates/wallflow-ipc/src/: frame.rs  lib.rs  protocol.rs
wallflow/wallflow-foundation/crates/wallflow-media/: Cargo.toml
wallflow/wallflow-foundation/crates/wallflow-media/src/: lib.rs
wallflow/wallflow-foundation/crates/wallflow-monitor/src/: lib.rs  provider.rs
wallflow/wallflow-foundation/crates/wallflow-package/: Cargo.toml
wallflow/wallflow-foundation/crates/wallflow-package/src/: error.rs  layout.rs  lib.rs  manifest.rs  validation.rs
wallflow/wallflow-foundation/crates/wallflow-render/: Cargo.toml
wallflow/wallflow-foundation/crates/wallflow-render/src/: error.rs  lib.rs  output.rs  renderer.rs  wgpu_error.rs
wallflow/wallflow-foundation/crates/wallflow-renderer/: Cargo.toml
wallflow/wallflow-foundation/crates/wallflow-renderer/src/: main.rs
wallflow/wallflow-foundation/docs/: roadmap.md
wallflow/wallflow-foundation/docs/agent/: 000-agent-rules.md  001-task-template.md
wallflow/wallflow-foundation/docs/agent/prompts/: 001-foundation-review.md
wallflow/wallflow-foundation/docs/architecture/: 002-ipc-contract.md  003-renderer-lifecycle.md  004-windows-desktop-attach.md  007-cloud-validation-strategy.md  008-wallpaper-package-format.md  009-static-image-rendering-model.md  010-renderer-window-runtime.md  011-static-render-output.md  012-wgpu-static-backend.md  013-softbuffer-window-presenter.md
