[package]
name = "wallflow-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
wallflow-common = { path = "../wallflow-common" }
wallflow-config = { path = "../wallflow-config" }
wallflow-monitor = { path = "../wallflow-monitor" }
wallflow-ipc = { path = "../wallflow-ipc" }
