[package]
name = "wallflow-monitor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
wallflow-common = { path = "../wallflow-common" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging"
] }
