[package]
name = "wallflow-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
wallflow-config = { path = "../wallflow-config" }
wallflow-core = { path = "../wallflow-core" }
wallflow-monitor = { path = "../wallflow-monitor" }
