[package]
name = "wallflow-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wallflow-config = { path = "../wallflow-config" }
wallflow-core = { path = "../wallflow-core" }
wallflow-desktop = { path = "../wallflow-desktop" }
wallflow-monitor = { path = "../wallflow-monitor" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging"
] }
