[package]
name = "wallflow-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wallflow-common = { path = "../wallflow-common" }
wallflow-config = { path = "../wallflow-config" }
wallflow-monitor = { path = "../wallflow-monitor" }
