[package]
name = "wallflow-desktop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging"
] }

[dev-dependencies]
serde_json.workspace = true
