[package]
name = "wallflow-renderer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wallflow-common = { path = "../wallflow-common" }
wallflow-desktop = { path = "../wallflow-desktop" }
wallflow-media = { path = "../wallflow-media" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging"
] }
